--- a/.github/workflows/generate_logos.yml
+++ b/.github/workflows/generate_logos.yml
@@ -2,26 +2,25 @@ name: Generate Logo
 on:
   workflow_dispatch:
     inputs:
-      project_name:
-        description: 'Your project name'
-        required: true
-        default: ${{ github.event.repository.name }}
       description:
         description: 'What does your project do?'
         required: true
+        type: string
 
 permissions:
   contents: write
   pull-requests: write
-  models: read
+  models: read  # Required for GitHub's AI models
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: jmcpheron/chiaro-oscuro@v1
+      
+      - name: Generate logo with AI
+        uses: jmcpheron/chiaro-oscuro@v1
         with:
-          project-name: ${{ inputs.project_name }}
+          project-name: ${{ github.event.repository.name }}
           description: ${{ inputs.description }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
